# meachine_learning_concepts

./: code_from_deepseek.ipynb  fake_medical_records.csv  learn_meachine_learning.ipynb  learn_xboost.ipynb  load_ml_model_from_pkl_file.ipynb  main.py  ml_sample.ipynb  pyproject.toml  sample_data.ipynb  sample_new_streamlit.py  sample_project.ipynb  sample_project_streamlit.py  steps_for_clearn_dataset.txt  working_ml_model.ipynb
meachine_learning_models/: sample_model_xgboost.pkl  student_pass_fail_model.pkl
